# interbotix_ros_arms

./: LICENSE  README.md
interbotix_descriptions/: CMakeLists.txt  README.md  package.xml
interbotix_descriptions/launch/: description.launch
interbotix_descriptions/meshes/meshes_vx300s/: VXSA-300-M-4-UF.stl  VXSA-300-M-5-LF.stl
interbotix_descriptions/meshes/meshes_wx250s/: WXSA-250-M-4-UF.stl  WXSA-250-M-5-LF.stl
interbotix_descriptions/urdf/: px100.urdf.xacro  px150.urdf.xacro  pxxls.urdf.xacro  rx150.urdf.xacro  rx200.urdf.xacro  vx250.urdf.xacro  vx300.urdf.xacro  vx300s.urdf.xacro  vxxmd.urdf.xacro  vxxms.urdf.xacro  wx200.urdf.xacro  wx250.urdf.xacro  wx250s.urdf.xacro  wxxmd.urdf.xacro  wxxms.urdf.xacro
interbotix_examples/interbotix_diagnostic_tool/: CMakeLists.txt  README.md  package.xml
interbotix_examples/interbotix_diagnostic_tool/data/wx200_ext_bearing/: wx200_ext_bearing.csv
interbotix_examples/interbotix_diagnostic_tool/data/wx200_home_bearing/: wx200_home_bearing.csv
interbotix_examples/interbotix_diagnostic_tool/launch/: diagnostic_tool.launch
interbotix_examples/interbotix_diagnostic_tool/msg/: MotorTemps.msg
interbotix_examples/interbotix_diagnostic_tool/scripts/: bag2csv.py
interbotix_examples/interbotix_diagnostic_tool/src/: diagnostic_tool_node.cpp
interbotix_examples/interbotix_joy_control/: CMakeLists.txt  README.md  package.xml
interbotix_examples/interbotix_joy_control/launch/: joy_control.launch
interbotix_examples/interbotix_joy_control/msg/: ArmJoyControl.msg  JoyControl.msg
interbotix_examples/interbotix_joy_control/scripts/: angle_manipulation.py  interbotix_mr_descriptions.py  joy_robot_control.py  pid.py
interbotix_examples/interbotix_joy_control/src/: joy_control_node.cpp
interbotix_examples/interbotix_moveit_interface/: CMakeLists.txt  README.md  package.xml
interbotix_examples/interbotix_moveit_interface/include/interbotix_moveit_interface/: moveit_interface.h
interbotix_examples/interbotix_moveit_interface/launch/: moveit_interface.launch
interbotix_examples/interbotix_moveit_interface/scripts/: moveit_interface_gui  moveit_python_interface
interbotix_examples/interbotix_moveit_interface/src/: moveit_interface.cpp  moveit_interface_node.cpp
interbotix_examples/interbotix_moveit_interface/srv/: MoveItPlan.srv
interbotix_examples/interbotix_pid_control/: CMakeLists.txt  README.md  package.xml
interbotix_examples/interbotix_pid_control/config/: gains.yaml
interbotix_examples/interbotix_pid_control/launch/: pid_control.launch
interbotix_examples/interbotix_pid_control/src/: pid_control_node.cpp
interbotix_examples/interbotix_puppet_control/: CMakeLists.txt  README.md  package.xml
interbotix_examples/interbotix_puppet_control/bag/: duck_throw.bag  wx200_commands.bag
interbotix_examples/interbotix_puppet_control/launch/: puppet_control.launch  puppet_control_single.launch
interbotix_examples/interbotix_puppet_control/rviz/: puppet_config.rviz
interbotix_examples/interbotix_puppet_control/src/: puppet_control_node.cpp  puppet_control_single_node.cpp
interbotix_examples/interbotix_turret_control/: CMakeLists.txt  README.md  package.xml
interbotix_examples/interbotix_turret_control/launch/: turret_control.launch
interbotix_examples/interbotix_turret_control/msg/: TurretControl.msg  TurretJoyControl.msg
interbotix_examples/interbotix_turret_control/scripts/: joystick.py  turret_control
interbotix_examples/interbotix_turret_control/src/: turret_control_joy_node.cpp
interbotix_examples/python_demos/: README.md  bartender.py  ee_cartesian_trajectory.py  ee_pose_components.py  ee_pose_matrix_control.py  gripper_control.py  joint_current_control.py  joint_position_control.py  turret_time_profile_control.py  turret_velocity_profile_control.py
interbotix_gazebo/: CMakeLists.txt  README.md  package.xml
interbotix_gazebo/config/: interbotix_texture.gazebo  wx250s_gazebo_controllers.yaml
interbotix_gazebo/launch/: gazebo.launch
interbotix_moveit/: CMakeLists.txt  README.md  package.xml
interbotix_moveit/config/: kinematics.yaml
interbotix_moveit/config/controllers/: 4dof_controllers.yaml  5dof_controllers.yaml  6dof_controllers.yaml
interbotix_moveit/config/joint_limits/: 4dof_joint_limits.yaml  5dof_joint_limits.yaml  6dof_joint_limits.yaml
interbotix_moveit/config/srdf/: px100.srdf.xacro  px150.srdf.xacro  rx150.srdf.xacro  rx200.srdf.xacro  vx250.srdf.xacro  vx300.srdf.xacro  vx300s.srdf.xacro  wx200.srdf.xacro  wx250.srdf.xacro  wx250s.srdf.xacro
interbotix_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  interbotix_moveit.launch  interbotix_moveit_controller_manager.launch.xml  interbotix_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
interbotix_sdk/: 10-interbotix-udev.rules  CMakeLists.txt  README.md  package.xml  setup.py
interbotix_sdk/config/: px100.yaml  px150.yaml  pxxls.yaml  rx150.yaml  rx200.yaml  vx250.yaml  vx300.yaml  vx300s.yaml  vxxmd.yaml  vxxms.yaml  wx200.yaml  wx250.yaml  wx250s.yaml  wxxmd.yaml  wxxms.yaml
interbotix_sdk/include/interbotix_sdk/: arm_obj.h  arm_poses.h
interbotix_sdk/launch/: arm_run.launch  turret_run.launch
interbotix_sdk/msg/: JointCommands.msg  SingleCommand.msg
interbotix_sdk/pid_config/: px100_pid.yaml  rx200_pid.yaml  vx300s_pid.yaml  wx200_pid.yaml  wx250s_pid.yaml
interbotix_sdk/src/: arm_node.cpp  arm_obj.cpp  pid.cpp
interbotix_sdk/src/interbotix_sdk/: robot_manipulation.py
interbotix_sdk/srv/: FirmwareGains.srv  OperatingModes.srv  RegisterValues.srv  RobotInfo.srv
