<?xml version="1.0"?>
<package format="2">
  <name>interbotix_sdk</name>
  <version>0.0.0</version>
  <description>The interbotix_sdk package</description>
  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_sdk</url> -->
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>interbotix_descriptions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>dynamixel_workbench_toolbox</build_export_depend>
  <build_export_depend>interbotix_descriptions</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>
  <exec_depend>interbotix_descriptions</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
