<?xml version="1.0"?>
<package format="2">
  <name>interbotix_moveit_interface</name>
  <version>0.0.0</version>
  <description>The interbotix_moveit_interface package</description>
  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_moveit_interface</url> -->
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interbotix_moveit</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>interbotix_moveit</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>interbotix_moveit</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
